adding swagger service
